CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES
02-09-05    Fallback to auto-detected language causing js errors in 
            FCK, fixed again
31-08-05    Some magic_quotes_gpc scenarios weren't dealt with correctly, now
            fixed (Eric Persson)
30-08-05    UserMgr Search/Sort/Pager fixes (Tobias Kuckuck)
30-08-05    Moved clone() emulation into constants.php
30-08-05    Seagull is now PHP5.1 compliant, this involved some local as
            well as PEAR modifications.

IMPROVEMENTS
08-09-05    DA_User::getPermsByModuleId() now returns perms sorted by perm name
            for easier management
08-09-05    getDefaultPageParams() factored out into SGL_Manager, all forced logouts
            now go to preferred screen set in config
06-09-05    Admins now notified of new registrations, separate screen for activating/
            disabling accounts
06-09-05    Added shell script to symlink templates into modules
06-09-05    Updated country fields in all DB schemas to CHAR(2) (Philippe Lhoste)
05-09-05    Added ability to scrape and include wiki pages, requires php5 + tidy
02-09-05    Static articles can now be edited inline
02-09-05    Added postgres user and database creation script (Pierpaolo Toniolo)
31-08-05    onload element attribute only included if event is non-empty (Philippe Lhoste)
30-08-05    Turkish translation added (Metin Tinay)
30-08-05    Added the db function unix_timestamp for oracle and postgres (Tobias Kuckuck)
30-08-05    Added missing passwordmgr_redirecttoedit permission (Tobias Kuckuck)
29-08-05    Renamed ConfigMgr's '_insert' method to '_update' to correctly reflect action, 